--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CardActivity"></activity>
+        <activity android:name=".CardActivity"
+                  android:label="Informações completa">
+        </activity>
     </application>
 
 </manifest>
